--- a/Workspace/MGHWayFinder/res/layout/test.xml
+++ b/Workspace/MGHWayFinder/res/layout/test.xml
@@ -39,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
         android:src="@drawable/delfin_logo_small" 
+        android:paddingTop="5dp"
         android:layout_gravity = "center"/>
 	    
 
@@ -48,6 +49,7 @@
 	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		 android:layout_width="fill_parent"
   		  android:layout_height="wrap_content"
+  		  android:paddingTop="10dp"
   		  android:paddingBottom="15dp"
   		   >
   		  <TextView
