fixed centering on first point (needed to be slowed down for long routes on slow devices, from 500 to 2000). added some labels too

--- a/Workspace/MGHWayFinder/res/layout/test.xml
+++ b/Workspace/MGHWayFinder/res/layout/test.xml
@@ -272,6 +272,7 @@
         android:layout_height="wrap_content" 
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:paddingBottom="15dp"
         android:src="@drawable/directions_small" 
         />
        	    
