--- a/Workspace/MGHWayFinder/res/layout/map.xml
+++ b/Workspace/MGHWayFinder/res/layout/map.xml
@@ -60,13 +60,17 @@
       	android:layout_width="60dp"
        	android:layout_height="wrap_content" 
        	android:layout_alignParentLeft="true"
-       	android:layout_alignParentBottom="true"/>    	     		    	    
+       	android:layout_alignParentBottom="true"
+       	android:text="Prev     "
+       	android:textSize="10sp"/>    	     		    	    
     	   	<Button
        android:id="@+id/btnNext"
       	android:layout_width="60dp"
       	android:layout_height="wrap_content"
       	android:layout_alignParentRight="true"
       	android:layout_alignParentBottom="true"
+      	android:text="      Next"
+      	android:textSize="10sp"
        	 />
         <!-- prob dont need these 	
  	     <TextView
