--- a/Workspace/MGHWayFinder/res/layout/map.xml
+++ b/Workspace/MGHWayFinder/res/layout/map.xml
@@ -62,6 +62,7 @@
        	android:layout_alignParentLeft="true"
        	android:layout_alignParentBottom="true"
        	android:text="Prev     "
+       	android:textColor="#ffffffff"
        	android:textSize="10sp"/>    	     		    	    
     	   	<Button
        android:id="@+id/btnNext"
@@ -70,6 +71,7 @@
       	android:layout_alignParentRight="true"
       	android:layout_alignParentBottom="true"
       	android:text="      Next"
+      	android:textColor="#ffffffff"
       	android:textSize="10sp"
        	 />
         <!-- prob dont need these 	
@@ -103,6 +105,7 @@
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
        	android:layout_alignParentBottom="true"
+       	android:textColor="#ffffffff"
        	android:text="View Picture" />	
        	
        	
