--- a/Workspace/MGHWayFinder/res/layout/row.xml
+++ b/Workspace/MGHWayFinder/res/layout/row.xml
@@ -18,14 +18,29 @@
         android:layout_width="0dip"
         android:layout_weight="1"
         android:layout_height="wrap_content">
+        
+        <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_weight="1"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/cardinalDirection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            
+            android:textSize="18sp"
+			android:textColor="#ffffff"
+        />      
         <TextView
             android:id="@+id/toptext"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:textSize="18sp"
 			android:textColor="#ffffff"
         />
+        </LinearLayout>
+        
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
